# splitwise-arbitrage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/: README.md  docker-compose.prod.yml
scripts/: install_windows_task.ps1
splitwise_arbitrage/: __init__.py  cli.py  config.py  models.py  money.py  planner.py  runner.py  scheduler.py  splitwise_client.py  state.py
tests/: test_config.py  test_planner.py
