[project]
name = "splitwise-arbitrage"
version = "0.1.0"
description = "Daily Splitwise balance arbitrage between Office and Office Servicios."
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "truststore>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
splitwise-arbitrage = "splitwise_arbitrage.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
